--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -14,9 +14,9 @@
 /* icono de zoom de la galería */
 .woocommerce-product-gallery__trigger {
     display: block;
-    position: absolute;
+    /* position: absolute;
     top: 5px;
-    right: 5px;
+    right: 5px; */
     z-index: 10;
     font-size: 0;
     color: inherit;
