--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -1,4 +1,5 @@
 #main .container .section{width:min(100% - 30px, 1220px); margin-inline:auto;}
+#main .container.product-wrapper .section{width:min(100%, 1220px); margin-inline:auto;}
 
 /* breadcrumb */
 #main .container.breadcrumb-wrapper{background-color:var(--wp--preset--color--line); padding-top:20px; display:var(--display--breadcrumb-single-product);}
