--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -83,6 +83,7 @@
     width: 20px;
     height: 20px;
     margin-right: 15px;
+    display:var(--display--breadcrumb-single-product);
 }
 
 .no-bg-color .woocommerce-product-gallery__trigger {
