summary padding · title product · font size

--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -22,7 +22,7 @@
 
 /* resumen */
 .summary.entry-sumary{padding:40px 15px 0;}
-
+.summary.entry-sumary .product_title.entry-title{font-size:var(--font-size--product-title);}
 /* precio */
 .product .summary .price{line-height:1; vertical-align:top; margin-bottom:0; padding:12px 0 24px;}
 .product .summary .price.has-sale-flash{padding-top:24px;}
