--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -32,6 +32,8 @@ table.variations tbody tr th.label label{font-weight:400; color:var(--wp--preset
 .woo-variation-swatches.wvs-show-label .variations th .woo-selected-variation-item-name{display:none;}
 .woo-variation-swatches .variable-items-wrapper{gap:10px;}
 .variations_form .single_variation_wrap{display:grid;}
+.variations_form .single_variation_wrap .woocommerce-variation-add-to-cart{order:1;}
+.variations_form .single_variation_wrap .woocommerce-variation{order:2;}
 
 /* precio */
 .product .summary .price{line-height:1; vertical-align:top; margin-bottom:0; padding:12px 0 24px;}
