variation swatches · single product · css

--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -33,6 +33,7 @@ table.variations tbody tr th.label label{font-weight:400; color:var(--wp--preset
 .woo-variation-swatches .variable-items-wrapper{gap:10px;}
 .variations_form .single_variation_wrap{display:grid;}
 .variations_form .single_variation_wrap .woocommerce-variation-add-to-cart{order:1;}
+.variations_form .single_variation_wrap .woocommerce-variation-add-to-cart .quantity{display:flex; align-items:center; justify-content:end; padding:0 18px; height:42px; border-left:1px solid #ccc; border-right:1px solid #ccc;}
 .variations_form .single_variation_wrap .woocommerce-variation{order:2;}
 
 /* precio */
