--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -37,6 +37,8 @@ table.variations tbody tr th.label label{font-weight:400; color:var(--wp--preset
         .variations_form .single_variation_wrap .woocommerce-variation-add-to-cart .quantity button{width:21px; height:21px; border:1px solid transparent; background-color:transparent; display:grid; place-content:center; color:var(--wp--preset--color--title); font-size:18px;}
         .variations_form .single_variation_wrap .woocommerce-variation-add-to-cart .quantity input[type=number]{width:50px; height:21px; display:flex; align-items:center; text-align:center; border:1px solid transparent; background-color:transparent;}
         .variations_form .single_variation_wrap .woocommerce-variation-add-to-cart .quantity input[type=number]:focus{outline:none;}
+        .variations_form .single_variation_wrap .woocommerce-variation-add-to-cart .quantity input[type=number]::-webkit-inner-spin-button, 
+        .variations_form .single_variation_wrap .woocommerce-variation-add-to-cart .quantity input[type=number]::-webkit-outer-spin-button{-webkit-appearance:none;}
         .variations_form .single_variation_wrap .woocommerce-variation-add-to-cart .single_add_to_cart_button{width:100%; padding:14px; color:#fff; background-color:var(--wp--preset--color--title); border:1px solid var(--wp--preset--color--title); font-size:16px;}
 .variations_form .single_variation_wrap .woocommerce-variation{order:2;}
 
