--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -42,7 +42,8 @@ table.variations tbody tr th.label label{font-weight:400; color:var(--wp--preset
         .variations_form .single_variation_wrap .woocommerce-variation-add-to-cart .single_add_to_cart_button{width:100%; padding:14px; color:#fff; background-color:var(--wp--preset--color--title); border:1px solid var(--wp--preset--color--title); font-size:16px;}
 .variations_form .single_variation_wrap .woocommerce-variation{order:2;}
     /* swatches */
-    .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item){box-shadow:var(--wvs-item-box-shadow,0 0 0 1px transparent);}
+    .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item){box-shadow:var(--wvs-item-box-shadow,0 0 0 1px transparent); padding:0;}
+    .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item).selected, .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item).selected:hover{box-shadow:var(--wvs-selected-item-box-shadow,0 0 0 1px var(--wp--preset--color--title));}
 /* precio */
 .product .summary .price{line-height:1; vertical-align:top; margin-bottom:0; padding:12px 0 24px;}
 .product .summary .price.has-sale-flash{padding-top:24px;}
