--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -43,7 +43,9 @@ table.variations tbody tr th.label label{font-weight:400; color:var(--wp--preset
 .variations_form .single_variation_wrap .woocommerce-variation{order:2;}
     /* swatches */
     .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item){box-shadow:var(--wvs-item-box-shadow,0 0 0 1px transparent); padding:0;}
-    .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item).selected, .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item).selected:hover{box-shadow:var(--wvs-selected-item-box-shadow,0 0 0 1px var(--wp--preset--color--title));}
+    .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item):hover{box-shadow:var(--wvs-selected-item-box-shadow,0 0 0 1px #444);}
+    .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item).selected, 
+    .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item).selected:hover{box-shadow:var(--wvs-selected-item-box-shadow,0 0 0 1px #444);}
 /* precio */
 .product .summary .price{line-height:1; vertical-align:top; margin-bottom:0; padding:12px 0 24px;}
 .product .summary .price.has-sale-flash{padding-top:24px;}
