--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ img{display:block; height:auto;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity label{display:none;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]::-webkit-inner-spin-button, 
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]::-webkit-outer-spin-button{-webkit-appearance:none;}
+#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]{-moz-appearance:textfield;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]{background-color:#333; border:none; width:20px; color:#fff; text-align:right; margin:0 10px;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]:focus{outline:none;}
 #cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity button{background-color:#333; border:none; color:#fff; border-radius:0;}
