--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -48,7 +48,14 @@ table.variations tbody tr th.label label{font-weight:400; color:var(--wp--preset
     .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item).selected, 
     .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item).selected:hover{box-shadow:var(--wvs-selected-item-box-shadow,0 0 0 1px #444444ab);}
     .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item).image-variable-item.selected:not(.no-stock) .variable-item-contents:before{background-image:none;}
-    
+
+/* añadir a la lista de deseos y compartir */
+.wishlist-button-and-share--wrapper{display:inline-flex; flex-wrap:wrap; gap:0 7px; margin-top:22px;}
+.wishlist-button-and-share--wrapper .share a{color:#a1a1a1;}
+.wishlist-button-and-share--wrapper .share a:hover{color:var(--wp--preset--color--title);}
+.wishlist-button-and-share--wrapper .share a:not(:last-child){margin-right:20px;}
+.wishlist-button-and-share--wrapper .share a svg{width:18px; height:18px;}
+
 /* precio */
 .product .summary .price{line-height:1; vertical-align:top; margin-bottom:0; padding:12px 0 24px;}
 .product .summary .price.has-sale-flash{padding-top:24px;}
