agrega el botón de agregar a la wishlist y de compartir al final del resumen de producto | css

--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -50,7 +50,8 @@ table.variations tbody tr th.label label{font-weight:400; color:var(--wp--preset
     .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item).image-variable-item.selected:not(.no-stock) .variable-item-contents:before{background-image:none;}
 
 /* añadir a la lista de deseos y compartir */
-.wishlist-button-and-share--wrapper{display:inline-flex; flex-wrap:wrap; gap:0 7px; margin-top:22px;}
+.wishlist-button-and-share--wrapper{display:inline-flex; flex-wrap:wrap; gap:0 15px; margin-top:22px;}
+.wishlist-button-and-share--wrapper .yith-wcwl-add-to-wishlist{margin-top:0; padding-right:15px; border-right:1px solid #dadada;}
 .wishlist-button-and-share--wrapper .share a{color:#a1a1a1;}
 .wishlist-button-and-share--wrapper .share a:hover{color:var(--wp--preset--color--title);}
 .wishlist-button-and-share--wrapper .share a:not(:last-child){margin-right:20px;}
