--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -42,6 +42,15 @@ table.variations tbody tr th.label label{font-weight:400; color:var(--wp--preset
         .variations_form .single_variation_wrap .woocommerce-variation-add-to-cart .quantity input[type=number]{-moz-appearance:textfield;}
         .variations_form .single_variation_wrap .woocommerce-variation-add-to-cart .single_add_to_cart_button{width:100%; padding:14px; color:#fff; background-color:var(--wp--preset--color--title); border:1px solid var(--wp--preset--color--title); font-size:16px;}
 .variations_form .single_variation_wrap .woocommerce-variation{order:2;}
+/* agregar al carrito · producto simple */
+.cart .quantity{display:flex; align-items:center; justify-content:end; padding:0 18px; height:42px; border-left:1px solid #ccc; border-right:1px solid #ccc; border-top:1px solid #ccc;}
+        .cart .quantity button{width:21px; height:21px; border:1px solid transparent; background-color:transparent; display:grid; place-content:center; color:var(--wp--preset--color--title); font-size:18px;}
+        .cart .quantity input[type=number]{width:50px; height:21px; display:flex; align-items:center; text-align:center; border:1px solid transparent; background-color:transparent;}
+        .cart .quantity input[type=number]:focus{outline:none;}
+        .cart .quantity input[type=number]::-webkit-inner-spin-button, 
+        .cart .quantity input[type=number]::-webkit-outer-spin-button{-webkit-appearance:none;}
+        .cart .quantity input[type=number]{-moz-appearance:textfield;}
+.cart .single_add_to_cart_button{width:100%; padding:14px; color:#fff; background-color:var(--wp--preset--color--title); border:1px solid var(--wp--preset--color--title); font-size:16px;}
     /* swatches */
     .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item).color-variable-item{width:19px; height:19px;}
     .woo-variation-swatches .variable-items-wrapper .variable-item:not(.radio-variable-item){box-shadow:var(--wvs-item-box-shadow,0 0 0 1px transparent); padding:0;}
