--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -1,8 +1,10 @@
 #main .container .section{width:min(100% - 30px, 1220px); margin-inline:auto;}
 #main .container.product-wrapper .section{width:min(100%, 1220px); margin-inline:auto;}
 
-/* contenedor de br */
-
+/* contenedor de breadcrumbs y paginación */
+#main .container .section.breadcrumb-and-pagination{display:flex; align-items:center; justify-content:space-between;}
+#main .container .section.breadcrumb-and-pagination .single-product-pagination{display:flex; align-items:center; gap:10px;}
+#main .container .section.breadcrumb-and-pagination .single-product-pagination a{font-size:12px; color:#a1a1a1;}
 /* breadcrumb */
 #main .container.breadcrumb-wrapper{background-color:#fff; padding-top:20px; display:var(--display--breadcrumb-single-product);}
 #main .container.breadcrumb-wrapper .section .woocommerce-breadcrumb{display:inline-flex; flex-wrap:wrap; gap:0 7px; font-size:14px;}
