--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -5,11 +5,13 @@
 #main .container .section.breadcrumb-and-pagination{display:flex; align-items:center; justify-content:space-between; flex-direction:row-reverse;}
 #main .container .section.breadcrumb-and-pagination .single-product-pagination{display:flex; align-items:center; gap:10px;}
 #main .container .section.breadcrumb-and-pagination .single-product-pagination a{font-size:12px; color:#a1a1a1;}
+#main .container .section.breadcrumb-and-pagination .single-product-pagination a:hover{color:#dc9814;}
+#main .container .section.breadcrumb-and-pagination .single-product-pagination a i.flip{transform:scaleX(-1);}
+
 /* breadcrumb */
 #main .container.breadcrumb-wrapper{background-color:#fff; padding-top:20px; display:var(--display--breadcrumb-single-product);}
 #main .container.breadcrumb-wrapper .section .woocommerce-breadcrumb{display:inline-flex; flex-wrap:wrap; gap:0 7px; font-size:14px;}
 #main .container.breadcrumb-wrapper .section .woocommerce-breadcrumb a{color:var(--wp--preset--color--title);}
-#main .container.breadcrumb-wrapper .section .woocommerce-breadcrumb a:hover{color:#dc9814;}
 
 /* datos del producto */
 #main .container.product-wrapper{background-color:var(--background--product-wrapper);}
