--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -6,7 +6,7 @@
 #main .container .section.breadcrumb-and-pagination .single-product-pagination{display:flex; align-items:center; gap:10px;}
 #main .container .section.breadcrumb-and-pagination .single-product-pagination a{font-size:12px; color:#a1a1a1;}
 #main .container .section.breadcrumb-and-pagination .single-product-pagination a:hover{color:#dc9814;}
-#main .container .section.breadcrumb-and-pagination .single-product-pagination div:nth-child(1) a{display:block; transform:scaleX(-1);}
+#main .container .section.breadcrumb-and-pagination .single-product-pagination .left a{display:block; transform:scaleX(-1);}
 
 /* breadcrumb */
 #main .container.breadcrumb-wrapper{background-color:#fff; padding-top:20px; display:var(--display--breadcrumb-single-product);}
