--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -116,11 +116,12 @@ table.variations tbody tr th.label label{font-weight:400; color:var(--wp--preset
     .product .summary .shop_attributes tr th,.product .summary .shop_attributes tr td{font-size:inherit; padding-bottom:12px;}
     .product .summary .shop_attributes tr:last-child th,.product .summary .shop_attributes tr:last-child td{padding-bottom:0;}
     /* pestaña valoraciones */
+    .woocommerce-noreviews{text-align:left; font-size:14px; color:var(--wp--preset--color--text);}
     #comments{padding:0;}
     #tab-title-reviews a span{position:relative; margin-left:7px; top:-7px; font-size:14px; color:var(--wp--preset--color--links);}
     #comments .woocommerce-Reviews-title{display:none;}
     .commentlist,
-    #review_form_wrapper{width:min(100%, 802px); margin-inline:auto;}
+    #review_form_wrapper{width:min(100%, 802px); margin-inline:auto; padding-top:32px;}
     .commentlist li:not(:first-child){border-top:none;}
     .commentlist li .comment_container{position:relative;}
     .commentlist li .comment_container img{border-radius:50%; position:absolute; top:0; left:0; display:var(--display--avatar);}
