--- a/assets/css/woocommerce/single-product.css
+++ b/assets/css/woocommerce/single-product.css
@@ -116,7 +116,7 @@ table.variations tbody tr th.label label{font-weight:400; color:var(--wp--preset
     .product .summary .shop_attributes tr th,.product .summary .shop_attributes tr td{font-size:inherit; padding-bottom:12px;}
     .product .summary .shop_attributes tr:last-child th,.product .summary .shop_attributes tr:last-child td{padding-bottom:0;}
     /* pestaña valoraciones */
-    .woocommerce-noreviews{text-align:left; font-size:14px; color:var(--wp--preset--color--text);}
+    .woocommerce-noreviews{text-align:left; font-size:14px; color:var(--wp--preset--color--text); max-width:820px; margin-inline:auto;}
     #comments{padding:0;}
     #tab-title-reviews a span{position:relative; margin-left:7px; top:-7px; font-size:14px; color:var(--wp--preset--color--links);}
     #comments .woocommerce-Reviews-title{display:none;}
