--- a/assets/css/woocommerce/lists.css
+++ b/assets/css/woocommerce/lists.css
@@ -2,6 +2,5 @@
 .products.columns-4 li{display:grid; gap:15px;}
 .products.columns-4 li .content{position:relative;}
 .products.columns-4 li .content > *{margin:0; line-height:1.6;}
-.products.columns-4 li .content .title-wrapper{color:var(--wp--preset--color--text);}
-.products.columns-4 li .content .title-wrapper:hover{color:var(--wp--preset--color--title);}
-.products.columns-4 li .content .title-wrapper .woocommerce-loop-product__title{font-size:16px;}
+.products.columns-4 li .content .title-wrapper .woocommerce-loop-product__title{color:var(--wp--preset--color--text); font-size:16px;}
+.products.columns-4 li .content .title-wrapper .woocommerce-loop-product__title:hover{color:var(--wp--preset--color--title);}
