--- a/assets/css/woocommerce/lists.css
+++ b/assets/css/woocommerce/lists.css
@@ -1,5 +1,6 @@
-.products.columns-4{padding-left:0; list-style:none; display:grid; gap:24px; grid-template-columns:repeat(auto-fill, minmax(218px, 1fr));}
+.products.columns-4{padding-left:0; list-style:none; display:grid; gap:24px; grid-template-columns:repeat(auto-fill, minmax(230px, 1fr));}
 .products.columns-4 li{display:grid; gap:15px;}
+.products.columns-4 li a img{width:100%;}
 .products.columns-4 li .content{position:relative;}
 .products.columns-4 li .content *{margin:0; line-height:1.6;}
 .products.columns-4 li .content .title-wrapper .woocommerce-loop-product__title{color:var(--wp--preset--color--text); font-size:16px; transition:all .3s ease;}
