--- a/assets/css/woocommerce/lists.css
+++ b/assets/css/woocommerce/lists.css
@@ -5,4 +5,4 @@
 .products.columns-4 li .content *{margin:0; line-height:1.6;}
 .products.columns-4 li .content .title-wrapper .woocommerce-loop-product__title{color:var(--wp--preset--color--text); font-size:16px; transition:all .3s ease;}
 .products.columns-4 li .content .title-wrapper .woocommerce-loop-product__title:hover{color:var(--wp--preset--color--title);}
-.products.columns-4 li .content .yith-wcwl-add-button{position:absolute; top:0; right:0;}
+.products.columns-4 li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist){position:absolute; top:0; right:0;}
