loop de woocommerce · css · php

--- a/assets/css/woocommerce/lists.css
+++ b/assets/css/woocommerce/lists.css
@@ -1,5 +1,5 @@
-.products.columns-4{padding-left:0; list-style:none; display:grid; gap:24px; grid-template-columns:var(--grid-columns--loop--woo); align-items:start;}
-.products.columns-4 li{display:grid; gap:15px;}
+.products.columns-4{padding-left:0; list-style:none; display:grid; gap:24px; grid-template-columns:var(--grid-columns--loop--woo);}
+.products.columns-4 li{display:grid; gap:15px; align-items:start;}
 .products.columns-4 li a img{width:100%;}
 .products.columns-4 li .content{position:relative; padding-right: 30px;}
 .products.columns-4 li .content *{margin:0; line-height:1.6;}
