--- a/assets/css/woocommerce/lists.css
+++ b/assets/css/woocommerce/lists.css
@@ -10,5 +10,5 @@
 .products.columns-4 li .content .show.permalink{opacity:1; font-size:14px;}
 .products.columns-4 li .content .show.permalink:hover{color:var(--wp--preset--color--links);}
 .products.columns-4 li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist){position:absolute; top:0; right:0; transition:all .3s ease;}
-.products.columns-4 li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist) i{ color:var(--wp--preset--color--text);}
+.products.columns-4 li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist) i{ color:var(--wp--preset--color--text); transition:all .3s ease;}
 .products.columns-4 li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist) i:hover{color:var(--wp--preset--color--title);}
