--- a/style.css
+++ b/style.css
@@ -107,7 +107,9 @@ img{display:block; height:auto;}
             #main-footer .social ul li a{display:inline-flex; align-items:center; gap:0; height:34px; font-size:0;}
             #main-footer .social ul li a:before{position:relative; padding:9px; display:inline-block;}
             #main-footer .social ul li a:hover{opacity:.7;}
-            #main-footer .social ul li a[href*="facebook"]:before{padding:9px 5px;}
+            #main-footer .social ul li a[href*="facebook"]:before{content:'\f09a';}
+            #main-footer .social ul li a[href*="twitter"]:before{content:'\e916';}
+            #main-footer .social ul li a[href*="instagram"]:before{content:'\f16f';}
 
 /* panel carrito */
 #cart-panel--wrapper{position:fixed; top:0; width:100%; height:100%; transition:all .3s ease; right:-100%; z-index:2;}
