--- a/assets/css/woocommerce/shop.css
+++ b/assets/css/woocommerce/shop.css
@@ -1,1 +1,3 @@
 .section.breadcrumb-filter-search{padding:var(--padding--breadcrumb--shop);}
+.section.breadcrumb-filter-search .categories-list--wrapper{}
+.section.breadcrumb-filter-search .categories-list--wrapper .categories-list{display:var(--categories-list--display); padding-left:0; list-style:none;}
