--- a/assets/css/woocommerce/shop.css
+++ b/assets/css/woocommerce/shop.css
@@ -3,8 +3,8 @@
 .section.breadcrumb-filter-search .header-shop *{margin:0;}
 .section.breadcrumb-filter-search .filters{max-height:0; overflow:hidden;}
 
-.section.breadcrumb-filter-search .categories-list--wrapper{display:grid;}
-.section.breadcrumb-filter-search .categories-list--wrapper .categories-list{display:var(--categories-list--display); padding-left:0; list-style:none;}
-.section.breadcrumb-filter-search .categories-list--wrapper .categories-list li a{font-size:var(--categories-list-link--font-size); margin:var(--categories-list-link--margin);}
-.section.breadcrumb-filter-search .categories-list--wrapper .categories-list li a:not(.active):hover{color:var(--wp--preset--color--links);}
-.section.breadcrumb-filter-search .categories-list--wrapper .categories-list li a:not(.active){color:var(--wp--preset--color--text);}
+.section.breadcrumb-filter-search .filter-content{display:grid;}
+.section.breadcrumb-filter-search .filter-content .filter-text{display:var(--categories-list--display); padding-left:0; list-style:none;}
+.section.breadcrumb-filter-search .filter-content .filter-text li a{font-size:var(--categories-list-link--font-size); margin:var(--categories-list-link--margin);}
+.section.breadcrumb-filter-search .filter-content .filter-text li a:not(.active):hover{color:var(--wp--preset--color--links);}
+.section.breadcrumb-filter-search .filter-content .filter-text li a:not(.active){color:var(--wp--preset--color--text);}
